Got a working version with some updates

--- a/appsettings.local.json
+++ b/appsettings.local.json
@@ -11,14 +11,14 @@
             },
             "logfile": {
                 "type": "File",
-                "fileName": "multicast.${date:format=yyyyMMddHH}.log",
+                "fileName": "log/multicast.${date:format=yyyyMMdd}.log",
                 "layout": {
                     "text": "${longdate}|${level:uppercase=true}|${logger:shortName=true}|${message}"
                 }
             },
             "logfiledebug": {
                 "type": "File",
-                "fileName": "multicast.${date:format=yyyyMMddHH}.debug.log",
+                "fileName": "log/multicast.${date:format=yyyyMMdd}.debug.log",
                 "layout": {
                     "text": "${longdate}|${level:uppercase=true}|${logger:shortName=true}|${message}"
                 }
