--- a/MCListener.TestTool/MCListener.TestTool.csproj
+++ b/MCListener.TestTool/MCListener.TestTool.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MCListener.Shared\MCListener.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
       <None Update="appsettings.local.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
