Small refactoring and added starting point for multiple channels and device detail

--- a/MCListener.Service/MCListener.Service.csproj
+++ b/MCListener.Service/MCListener.Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
@@ -10,6 +10,9 @@
     <ProjectReference Include="..\MCListener.Shared\MCListener.Shared.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="appsettings.secret.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
