Added futher DI Connected to Firebase module and pushing pings to the cloud Added configuration to config (for DI purposes) Default run mode added to config

--- a/MCListener.TestTool/appsettings.local.json
+++ b/MCListener.TestTool/appsettings.local.json
@@ -1,45 +1,56 @@
 {
-    "NLog": {
-        "throwConfigExceptions": true,
-        "targets": {
-            "logconsole": {
-                "type": "ColoredConsole",
-                "layout": {
-                    "type": "SimpleLayout",
-                    "text": "${longdate}|${level:uppercase=true}|${logger:shortName=true}|${message}"
-                }
-            },
-            "logfile": {
-                "type": "File",
-                "fileName": "log/multicast.${date:format=yyyyMMdd}.log",
-                "layout": {
-                    "text": "${longdate}|${level:uppercase=true}|${logger:shortName=true}|${message}"
-                }
-            },
-            "logfiledebug": {
-                "type": "File",
-                "fileName": "log/multicast.${date:format=yyyyMMdd}.debug.log",
-                "layout": {
-                    "text": "${longdate}|${level:uppercase=true}|${logger:shortName=true}|${message}"
-                }
-            }
-        },
-        "rules": [
-            {
-                "logger": "*",
-                "minLevel": "Trace",
-                "writeTo": "logconsole"
-            },
-            {
-                "logger": "*",
-                "minLevel": "Information",
-                "writeTo": "logfile"
-            },
-            {
-                "logger": "*",
-                "minLevel": "Trace",
-                "writeTo": "logfiledebug"
-            }
-        ]
-    }
+  "DefaultMode": "test", //Optional, mode to run will be used as fallback
+  "multicast": {
+    "Ip": "236.99.250.121",
+    "Port": 30022
+  },
+  "Tester": {
+    "IntervalMS": 1000,
+    "WaitMS": 3000
+  },
+
+
+  "NLog": {
+    "throwConfigExceptions": true,
+    "targets": {
+      "logconsole": {
+        "type": "ColoredConsole",
+        "layout": {
+          "type": "SimpleLayout",
+          "text": "${longdate}|${level:uppercase=true}|${logger:shortName=true}|${message}"
+        }
+      },
+      "logfile": {
+        "type": "File",
+        "fileName": "log/multicast.${date:format=yyyyMMdd}.log",
+        "layout": {
+          "text": "${longdate}|${level:uppercase=true}|${logger:shortName=true}|${message}"
+        }
+      },
+      "logfiledebug": {
+        "type": "File",
+        "fileName": "log/multicast.${date:format=yyyyMMdd}.debug.log",
+        "layout": {
+          "text": "${longdate}|${level:uppercase=true}|${logger:shortName=true}|${message}"
+        }
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Trace",
+        "writeTo": "logconsole"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Information",
+        "writeTo": "logfile"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Trace",
+        "writeTo": "logfiledebug"
+      }
+    ]
+  }
 }
