--- a/MCListener.TestTool/appsettings.secret.example.json
+++ b/MCListener.TestTool/appsettings.secret.example.json
@@ -1,4 +1,10 @@
 // Configuration file with the global configuration, add your local configuration to appsettings.local.json
 {
-   
+  "Firebase": {
+    "Topic": "",
+    "Endpoint": ""
+  },
+  "Azure": {
+    "Endpoint": ""
+  }
 }
