Implemented the firebase roundtrip

--- a/MCListener.TestTool/appsettings.secret.example.json
+++ b/MCListener.TestTool/appsettings.secret.example.json
@@ -1,7 +1,8 @@
 // Configuration file with the global configuration, add your local configuration to appsettings.local.json
 {
   "Firebase": {
-    "Topic": "",
+    "TopicRequests": "ping",
+    "TopicResponses": "pong",
     "Endpoint": ""
   },
   "Azure": {
