--- a/MCListener.TestTool/appsettings.local.json
+++ b/MCListener.TestTool/appsettings.local.json
@@ -6,7 +6,9 @@
   },
   "Tester": {
     "IntervalMS": 1000,
-    "WaitMS": 3000
+    "WaitMS": 3000,
+    "TestMulticast": true,
+    "TestFirebase":  true
   },
 
 
