Only flag error once Increaded interval for signal back Added setting to purge firebase on start

--- a/MCListener.TestTool/appsettings.local.json
+++ b/MCListener.TestTool/appsettings.local.json
@@ -6,9 +6,9 @@
   },
   "Tester": {
     "IntervalMS": 1000,
-    "WaitMS": 3000,
+    "WaitMS": 5000,
     "TestMulticast": true,
-    "TestFirebase":  true
+    "TestFirebase": true,
   },
 
 
