--- a/MCListener.TestTool/appsettings.secret.example.json
+++ b/MCListener.TestTool/appsettings.secret.example.json
@@ -3,6 +3,7 @@
   "Firebase": {
     "TopicRequests": "ping",
     "TopicResponses": "pong",
+    "PurgeFirebaseOnStart": true,
     "Endpoint": ""
   },
   "Azure": {
