Added burst and made function json optional

--- a/MCListener.TestTool/appsettings.local.json
+++ b/MCListener.TestTool/appsettings.local.json
@@ -2,7 +2,10 @@
   "DefaultMode": "test", //Optional, mode to run will be used as fallback
   "multicast": {
     "Ip": "236.99.250.121",
-    "Port": 30022
+    "Port": 30022,
+    "PerformBurst": true,
+    "BurstCount": 3,
+    "BurstIntervalMS": 300
   },
   "Tester": {
     "IntervalMS": 1000,
