Purging heartbeats also if expired (we only did this when found in our collection) Set the remove firebase flag to false in the example (to prevent data purge on production env) Firebase channel now offloads the processing, this was a "blocking transaction", in  a thread no queue will appear

--- a/MCListener.TestTool/appsettings.secret.example.json
+++ b/MCListener.TestTool/appsettings.secret.example.json
@@ -3,7 +3,7 @@
   "Firebase": {
     "TopicRequests": "ping",
     "TopicResponses": "pong",
-    "PurgeFirebaseOnStart": true,
+    "PurgeFirebaseOnStart": false,
     "Endpoint": ""
   },
   "Azure": {
